# Multiclass-Flare-prediction

./: .gitignore  README.md  pyproject.toml
scripts/: MCD_inference.py  conformal_pred.py  cp_analysis.ipynb  cp_analysis_scr.py  cp_detail_analysis.ipynb  optimization.py  optimization_ensemble.py
scripts/configs/: arguments.py  cp_config.yaml  cp_config_ensemble.yaml
scripts/conformalization/: __init__.py  scores.py
scripts/data_creation/: label_maker.py
scripts/models/: __init__.py  model.py
scripts/training/: Dataloader.py  Measurements.py  Sampling.py  TrainTest_loop.py  __init__.py
